k8s/golangci-lint-runner.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: golangci-lint-runner
  name: golangci-lint-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golangci-lint-runner
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: golangci-lint-runner
    spec:
      containers:
        - name: golangci-lint-runner
          image: <your image>
          imagePullPolicy: Always
          volumeMounts:
            - name: privatekey
              mountPath: "/etc/secrets"
              readOnly: true
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 8000
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      volumes:
        - name: privatekey
          secret:
            secretName: golangci-lint-runner
            items:
              - key: GITHUB_PRIVATE_KEY
                path: private-key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: golangci-lint-runner
  name: golangci-lint-runner
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: golangci-lint-runner
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: golangci-lint-runner
    hostname: golangci.talon.farm
  name: golangci-lint-runner
spec:
  rules:
    - host: golangci.talon.farm
      http:
        paths:
          - backend:
              serviceName: golangci-lint-runner
              servicePort: 80
